--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Installing yarn
         run: sudo npm install -g yarn
       - name: Creating Build.
-        run: yarn build
+        run: npm run-script build
 
       # Runs a set of commands using the runners shell
       - name: Deploying build
